Gateway_API/03-basic-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: python-route
  namespace: default
spec:
  parentRefs:
    - name: platform-gw
      sectionName: http  # or https when binding to TLS listener
  hostnames:
    - exampleapp-python.com
  rules:
    - backendRefs:
        - name: python-svc
          port: 5000
          weight: 1
