Gateway_API/04-hostname-routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: python-by-host
  namespace: default
spec:
  parentRefs:
    - name: platform-gw
      sectionName: http
  hostnames:
    - exampleapp-python.com
  rules:
    - backendRefs:
        - name: python-svc
          port: 5000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-by-host
  namespace: default
spec:
  parentRefs:
    - name: platform-gw
      sectionName: http
  hostnames:
    - exampleapp-go.com
  rules:
    - backendRefs:
        - name: go-svc
          port: 5000
