Gateway_API/06-url-rewrite.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: python-under-central
  namespace: default
spec:
  parentRefs:
    - name: platform-gw
      sectionName: http
  hostnames:
    - centralapp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/python
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: python-svc
          port: 5000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-under-central
  namespace: default
spec:
  parentRefs:
    - name: platform-gw
      sectionName: http
  hostnames:
    - centralapp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/go
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: go-svc
          port: 5000
